# mdb2psql

./: pyproject.toml
scripts/: diagnose_mdb.py  install_service.ps1
src/mdb_sync/: config.py  main.py
src/mdb_sync/application/: mapper.py  sync_engine.py
src/mdb_sync/domain/: models.py
src/mdb_sync/infrastructure/mdb/: repository.py
src/mdb_sync/infrastructure/postgres/: database.py  models.py  repository.py
src/mdb_sync/scheduler/: sync_scheduler.py
src/mdb_sync/utils/: alerting.py  circuit_breaker.py  health.py  mdb_check.py  metrics.py
tests/: test_mapper.py  test_mdb_resilience.py  test_recovery.py
