[project]
name = "dbupdater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "mypy>=2.1.0",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyodbc>=5.3.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]
